--- a/static/sass/_base.scss
+++ b/static/sass/_base.scss
@@ -22,3 +22,12 @@ $cupHivePaddingBottom: $cpuHiveRatio * $cpuHiveWidth;
 $headerBorderWidth: 2px;
 $headerBorderColor: #999;
 $headerLineOffset: 0px;
+
+$lineWidth: 2px;
+$tickWidth: 2px;
+$areaFillOpacity: 0.65;
+$tickFontSize: 12px;
+
+$lineWidthNarrow: 4px;
+$tickWidthNarrow: 2px;
+$tickFontSizeNarrow: 20px;
