--- a/static/sass/_GraphComposite.scss
+++ b/static/sass/_GraphComposite.scss
@@ -11,6 +11,7 @@
     top: 0;
     bottom: pxtoem(-$margin);
     overflow: auto;
+    @include transition(background-color 0.25s ease-in-out);
 
     &::-webkit-scrollbar {
       width: pxtoem($margin);
@@ -20,7 +21,7 @@
     &::-webkit-scrollbar-track {
 //      background-color: #e5e5e5;
       box-sizing: border-box;
-      border: pxtoem(1px) solid #e5e5e5;
+      border: pxtoem(1px) solid rgba($headerBorderColor, 0.5);
       border-radius: pxtoem($margin / 2);
     }
 
@@ -39,10 +40,6 @@
       height: 100% !important;
       background-color: #fff;
       margin-left: auto;
-
-      &.paused {
-        background-color: #e5e5e5;
-      }
     }
   }
 
@@ -67,6 +64,7 @@
 
     .bg {
       fill: rgba(#fff, 0.5);
+      @include transition(fill 0.25s ease-in-out);
     }
 
     .tick text {
@@ -83,6 +81,18 @@
     top: pxtoem(-25px);
     left: 0;
     right: 0;
+  }
+
+  &.paused {
+    .wrapper, .wrapper svg {
+      background-color: #e5e5e5;
+    }
+
+    svg.overlay {
+      .bg {
+        fill: rgba(#e5e5e5, 0.5);
+      }
+    }
   }
 }
 
